# sakubun

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Procfile  README.md  Rocket.toml  jlpt.txt  kanken.txt  known_kanji.txt  rtk.csv  rtk.txt  wanikani.txt
.github/workflows/: rust.yml
migrations/: 20220829063159_initial_migration.sql
scripts/: combine_lists.rs  fetch_wanikani.rs  parse_rtk.rs  sudachi_transcribe.py  unidic_transcribe.py
src/: actions.rs  admin.rs  db.rs  kanji_import.rs  main.rs  sentences.rs
static/pwa/: manifest.json  service-worker.js
static/scripts/: admin.js  custom_text.js  ds.min.js  essay.js  known_kanji.js  kuroshiro-analyzer-kuromoji.min.js  main.js  patience_diff.js  quiz.js  signin.js  streaks.js  upload-local.js  wanakana.min.js
static/styles/: admin.css  admin.css.map  admin.scss  custom_text.css  custom_text.css.map  custom_text.scss  essay.css  essay.css.map  essay.scss  index.css  index.css.map  index.scss  known_kanji.css  known_kanji.css.map  known_kanji.scss  main.css  main.css.map  main.scss  noscript.css  noscript.css.map  noscript.scss  quiz.css  quiz.css.map  quiz.scss  sentences.css  sentences.css.map  sentences.scss  signin.scss  streaks.css  streaks.css.map  streaks.scss
templates/: admin.html.tera  admin_signin.html.tera  custom_text.html.tera  essay.html.tera  index.html.tera  known_kanji.html.tera  layout.html.tera  offline.html.tera  quiz.html.tera  reset_password.html.tera  signin.html.tera  signup.html.tera
