[package]
name = "sakubun"
version = "0.1.0"
authors = ["aravk <aravkasi@gmail.com>"]
edition = "2021"

[dependencies]
dotenv = "0.15"
regex = "1.11"
argon2 = "0.5"
rand = "0.8.5"
sqlx = { version = "0.7", default-features = false, features = ["chrono", "sqlite"] }
rocket = { version = "0.5.1", features = ["secrets", "json"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
rocket_db_pools = { version = "0.2.0", features = ["sqlx_postgres"] }
zip = { version = "2.2.2", default-features = false, features = ["deflate"] }
async_zip = { version = "0.0.17", features = ["tokio", "tokio-fs"] }
async-compression = { version = "0.4.18", features = ["futures-io", "zstd"] }
native-tls = "0.2.12"
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
zstd = "0.13"
chrono-tz = "0.10"
